[tool.poetry]
name = "shotscraper-test"
version = "0.1.0"
description = ""
authors = ["Daniel Bachler <daniel@danielbachler.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
shot-scraper = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
